# excalidraw-agentic-clone

./: .env.selfhost  .eslintignore  LICENSE  README.md  THIRD-PARTY-LICENSES.md  package.json
.github/workflows/: excaliboard-app-deploy.yml  excaliboard-deploy.yml
docs/design/: excaliboard-spec.md  phase2-cloud-sync.md  phase3-self-host-web.md  phase5-mcp-and-skill-sync.md  phase6-identity-auth.md  phase7-multiuser-oss.md
excalidraw-app/: App.tsx  ExcalidrawPlusIframeExport.tsx  app_constants.ts  index.html  index.scss  index.tsx  package.json  vite-env.d.ts  vite.config.mts
excalidraw-app/account/: AdminPage.tsx  AuthGate.tsx  (+8 more)
selfhost/: .env.example  README.md  docker-compose.yml
server/: .env.example  .gitignore  Dockerfile  README.md  backup_pg.sh  docker-compose.yml  pyproject.toml
server/app/: __init__.py  admin.py  auth.py  b64.py  config.py  email.py  limits.py  main.py  observability.py  ratelimit.py  schemas.py  security.py
server/app/api/: __init__.py  admin_routes.py  auth_routes.py  oauth_device.py  routes.py
server/app/sql/: 001_init.sql  002_auth.sql  __init__.py
server/app/store/: __init__.py  base.py  memory.py  postgres.py
server/deploy/: README.md  bootstrap-cosmos.sh  deploy-cosmos.sh  install-app-vhost.sh  known_hosts
server/deploy/nginx/: excaliboard-app.conf  excaliboard.conf
server/tests/: conftest.py  test_auth.py  test_caps.py  test_cf_access.py  test_config.py  test_files.py  test_health.py  test_index.py  test_opacity_and_limits.py  test_phase7_auth.py  test_postgres_integration.py  test_scene_cas.py  util.py
(+16 files in other folders)
