[project]
name = "excaliboard-server"
version = "0.1.0"
description = "Excaliboard Phase 2 sync server — versioned opaque-ciphertext blob store"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "asyncpg>=0.30",
    "pyjwt[crypto]>=2.9",
]

[project.optional-dependencies]
# Tracing → Phoenix. fleet-obs itself is imported dynamically and installed at
# deploy (local path / wheel); these are the transport deps it builds on.
obs = [
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27",
]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
